@@ -1,15 +1,20 @@
 package com.skillstorm.demo.services;
 
+import java.math.BigDecimal;
+import java.sql.Date;
 import java.util.List;
 import java.util.Optional;
 
 import javax.transaction.Transactional;
+import javax.validation.constraints.NotBlank;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import com.skillstorm.demo.dtos.GoalDto;
 import com.skillstorm.demo.models.Goal;
+import com.skillstorm.demo.models.Goal.GoalBuilder;
+import com.skillstorm.demo.models.User;
 import com.skillstorm.demo.repositories.GoalRepository;
 import com.skillstorm.demo.repositories.UserRepository;
 
@@ -19,20 +24,15 @@ public class GoalService {
 	
 	@Autowired
 	private GoalRepository goalRepository;
+	
+	@Autowired
 	private UserRepository userRepository;
 	
-	public List<GoalDto> findAllGoalsById(Long userId) {
-//		Optional<Goal> goalOptional = goalRepository.findById(userId);
-//        if (goalOptional.isPresent()) {
-//            Goal goal = goalOptional.get();
-//            return goal.stream()
-//                    .map(Goal::toDto)
-//                    .collect(Collectors.toList());
-//        }
-        return List.of(); 
-//				.stream()
-//				.map(t -> t.toDto())
-//				.toList();
+	public List<GoalDto> findAllGoalsByUserId(long userId) {
+		return goalRepository.findAllGoalsByUserId(userId)
+				.stream()
+				.map(g -> g.toDto())
+				.toList();
 	}
 	
 	/**
@@ -41,15 +41,28 @@ public class GoalService {
 	 * @return The data of the newly create goal
 	 */
 	public GoalDto createGoal(GoalDto goalData) {
-		User user = userRepository.findById(goalData.getUserId());
-		Goal goal = new Goal(goalData.getId(), goalData.getTitle(), 
-				goalData.getStartDate(), goalData.getTargetDate(),
-				goalData.getStartAmount(), goalData.getTargetAmount(), 
-				goalData.getCurrentAmount(), goalData.getDescription(), 
-				goalData.getCategory(), goalData.getPhotoURL(), user);
-				
+		User user = userRepository.findById(goalData.getUserId())
+				.orElseThrow();
+//		Goal goal = new Goal(goalData.getTitle(), 
+//				goalData.getStartDate(), goalData.getTargetDate(),
+//				goalData.getStartAmount(), goalData.getTargetAmount(), 
+//				goalData.getCurrentAmount(), goalData.getDescription(),
+//				goalData.getCategory(), goalData.getPhotoURL(), user);
+		Goal goal = Goal.builder().category(goalData.getCategory())
+				.title(goalData.getTitle())
+				.startDate(goalData.getStartDate())
+				.targetDate(goalData.getTargetDate())
+				.startAmount(goalData.getStartAmount())
+				.targetAmount(goalData.getTargetAmount())
+				.currentAmount(goalData.getCurrentAmount())
+				.description(goalData.getDescription())
+				.category(goalData.getCategory())
+				.photoURL(goalData.getPhotoURL())
+				.user(user)
+				.build();
+	
+
 		return goalRepository.save(goal).toDto();
+
 	}
 }
-
-// GoalDto(long, String, Date, Date, BigDecimal, BigDecimal, BigDecimal, String, String, String)
